--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -67,8 +67,10 @@ jobs:
           echo 'org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC' >> ~/.gradle/gradle.properties
           echo 'android.native.buildOutput=verbose' >> ~/.gradle/gradle.properties
           cd api
+          chmod 777 gradlew
           ./gradlew publishToMavenLocal
           cd ../service
+          chmod 777 gradlew
           ./gradlew publishToMavenLocal
 
       - name: Build with Gradle
